tests/good/local_var/main.sm
(module Main imports (StdLib Foo))

(vars (
  (let X 20)
))

(functions (
  (function main ()
    (begin
      (write! (getX))
      (write! X)

      (setX 30)
      (set! X 40)

      (write! (getX))
      (write! X)
    )
  )
))
