tests/bad/function_as_value/main.sm
(module Main imports (StdLib))

(vars ())

(functions (
  (function foo () 0)

  (function main ()
    (begin
      (write! foo)
    )
  )
))


